[package]
name = "rhizome-trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
blake2 = "0.10.5"
blake3 = "1.3.2"
digest = "0.10.6"
graphviz-rust = "0.4.0"
hex = "0.4.3"
lru = "0.8.1"
uuid = {version="1.2.2", features=["v4"]}
